--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvchannels.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvchannels.html
@@ -18,43 +18,33 @@
                 <div class="listTopPaging">
                 </div>
             </div>
-            <div id="items" class="itemsContainer"></div>
-
+            <div id="items" class="itemsContainer" style="max-width:800px;margin: 0 auto;"></div>
         </div>
-
         <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <form>
-
                 <div data-role="controlgroup" data-type="horizontal" data-mini="true" class="viewPanelTabs">
                     <a href="#" data-role="button" class="viewTabButton" data-tab="tabView">${TabView}</a>
                     <a href="#" data-role="button" class="viewTabButton" data-tab="tabFilter">${TabFilter}</a>
                 </div>
-
                 <div class="tabView viewTab">
-
                     <div>
                         <label for="selectPageSize">${LabelPageSize}</label>
                         <select id="selectPageSize"></select>
                     </div>
-
                 </div>
                 <div class="tabFilter viewTab">
                     <fieldset data-role="controlgroup">
                         <legend>${HeaderFilters}</legend>
                         <input class="chkStandardFilter" type="checkbox" id="chkFavorite" data-filter="IsFavorite" data-mini="true">
                         <label for="chkFavorite">${OptionFavorite}</label>
-
                         <input class="chkStandardFilter" type="checkbox" id="chkLikes" data-filter="Likes" data-mini="true">
                         <label for="chkLikes">${OptionLikes}</label>
-
                         <input class="chkStandardFilter" type="checkbox" id="chkDislikes" data-filter="Dislikes" data-mini="true">
                         <label for="chkDislikes">${OptionDislikes}</label>
                     </fieldset>
-
                 </div>
             </form>
         </div>
-
     </div>
 </body>
 </html>
