--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
@@ -56,7 +56,7 @@
                                 <label for="selectCountry">${LabelCountry}</label>
                                 <select id="selectCountry" data-mini="true" required="required">
                                     <option value="ca">Canada</option>
-                                    <option value="us" selected>United States</option>
+                                    <option value="usa" selected>United States</option>
                                 </select>
                             </div>
                             <div>
