update tv config

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
@@ -26,14 +26,10 @@
                     <form class="formLogin">
                         <div>
                             <div>
-                                <br />
-                                <label for="txtUser">${LabelUsername}</label>
-                                <input type="text" id="txtUser" required="required" autocomplete="off" />
+                                <paper-input class="txtUser" label="${LabelUsername}" required="required" autocomplete="off"></paper-input>
                             </div>
                             <div>
-                                <br />
-                                <label for="txtPass">${LabelPassword}</label>
-                                <input type="password" id="txtPass" required="required" autocomplete="off" />
+                                <paper-input class="txtPass" label="${LabelPassword}" required="required" autocomplete="off" type="password"></paper-input>
                             </div>
                             <div>
                                 <button type="submit" data-role="none" class="clearButton">
@@ -60,9 +56,7 @@
                                 </select>
                             </div>
                             <div>
-                                <br />
-                                <label for="txtZipCode">${LabelZipCode}</label>
-                                <input type="text" id="txtZipCode" required="required" />
+                                <paper-input class="txtZipCode" label="${LabelZipCode}" required="required"></paper-input>
                             </div>
                             <div>
                                 <br />
