--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvtunerprovider-m3u.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvtunerprovider-m3u.html
@@ -22,9 +22,7 @@
                     <form>
                         <div>
                             <div>
-                                <br />
-                                <label for="txtDevicePath">${LabelPath}</label>
-                                <input type="text" id="txtDevicePath" required="required" />
+                                <paper-input class="txtDevicePath" label="${LabelPath}" required="required"></paper-input>
                             </div>
                             <br />
                             <div>
