--- a/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-in.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-in.html
@@ -18,4 +18,5 @@
 <link rel="import" href="bower_components/paper-slider/paper-slider.html">
 <link rel="import" href="bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="bower_components/paper-input/paper-input.html">
+<link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="thirdparty/emby-icons.html">
