--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvtunerprovider-hdhomerun.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvtunerprovider-hdhomerun.html
@@ -22,7 +22,7 @@
                     <form>
                         <div>
                             <div>
-                                <paper-input class="txtDevicePath" label="${LabelPath}" required="required"></paper-input>
+                                <paper-input class="txtDevicePath" label="${LabelTunerIpAddress}" required="required"></paper-input>
                             </div>
                             <div>
                                 <br />
