--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
@@ -74,13 +74,9 @@
                     <div class="detailSectionContent">
                         <br />
                         <div>
-                            <br />
-                            <div>
-                                <label for="txtSyncPath">${LabelSyncPath}</label>
-                                <div style="display: inline-block; width: 85%;">
-                                    <input type="text" id="txtSyncPath" readonly />
-                                </div>
-                                <button class="btnSelectSyncPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true"></button>
+                            <div data-role="controlgroup">
+                                <label for="chkSyncToExternalCard">${OptionSyncToSDCard}</label>
+                                <input type="checkbox" id="chkSyncToExternalCard" />
                             </div>
                         </div>
 
