update schedules direct page

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
@@ -19,8 +19,13 @@
 
                     <h1>Schedules Direct</h1>
                     <p class="createAccountHelp"></p>
-                    <div style="background-color:rgba(82,181,75,.8);color:#fff;padding:.7em 1em;font-size:16px;border-radius:4px;">
-                        ${GuideProviderLoginStep}
+                    <div style="font-size:16px;">
+                        <div style="display:inline-block;background-color:rgba(82,181,75,.8);color:#fff;padding:2px 10px;font-size:20px;border-radius:1000px;vertical-align:middle;">
+                            1
+                        </div>
+                        <div style="display:inline-block;vertical-align:middle;margin-left:5px;">
+                            ${GuideProviderLogin}
+                        </div>
                     </div>
 
                     <form class="formLogin">
@@ -42,8 +47,13 @@
                     <br />
                     <br />
                     <br />
-                    <div style="background-color:rgba(82,181,75,.8);color:#fff;padding:.7em 1em;font-size:16px;border-radius:4px;">
-                        ${GuideProviderListingsStep}
+                    <div style="font-size:16px;">
+                        <div style="display:inline-block;background-color:rgba(82,181,75,.8);color:#fff;padding:2px 10px;font-size:20px;border-radius:1000px;vertical-align:middle;">
+                            2
+                        </div>
+                        <div style="display:inline-block;vertical-align:middle;margin-left:5px;">
+                            ${GuideProviderSelectListings}
+                        </div>
                     </div>
                     <form class="formListings">
                         <div>
