--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -21,6 +21,15 @@
             </div>
         </div>
 
+        <div class="itemTabs homeTabs" style="display: none;">
+            <div class="libraryViewNav scopedLibraryViewNav">
+                <a href="index.html" class="lnkHomeHome"><iron-icon icon="home"></iron-icon>${TabHome}</a>
+                <a href="index.html?tab=1" class="lnkHomeNextUp"><iron-icon icon="navigate-next"></iron-icon>${TabNextUp}</a>
+                <a href="index.html?tab=2" class="lnkHomeFavorites"><iron-icon icon="favorite"></iron-icon>${TabFavorites}</a>
+                <a href="index.html?tab=3" class="lnkHomeUpcoming"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
+            </div>
+        </div>
+
         <div id="movieTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="moviesrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
