add ability to disable tuner

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvtunerprovider-hdhomerun.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvtunerprovider-hdhomerun.html
@@ -26,6 +26,11 @@
                             </div>
                             <div>
                                 <br />
+                                <paper-checkbox class="chkEnabled">${LabelEnableThisTuner}</paper-checkbox>
+                                <div class="fieldDescription paperCheckboxFieldDescription">${LabelEnableThisTunerHelp}</div>
+                            </div>
+                            <div>
+                                <br />
                                 <paper-checkbox class="chkFavorite">${LabelImportOnlyFavoriteChannels}</paper-checkbox>
                                 <div class="fieldDescription paperCheckboxFieldDescription">${ImportFavoriteChannelsHelp}</div>
                             </div>
